--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,5 @@
 # Maven
+
 # Build your Java project and run tests with Apache Maven.
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
@@ -20,3 +21,11 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+- task: LambdaDeployFunction@1
+  inputs:
+    awsCredentials: 'AWs-Lambda'
+    regionName: 'eu-west-2'
+    deploymentMode: 'codeonly'
+    functionName: 
+    codeLocation: 'localfile'
+    localZipFile: 'reponame'
